--- a/ChachaT/Onboarding.storyboard
+++ b/ChachaT/Onboarding.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="11m-Bf-sI4">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="11m-Bf-sI4">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,6 +28,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By creating an account, you accept our " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWv-S8-RVR">
+                                <rect key="frame" x="95" y="374" width="185" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="BZ1-wM-LvW"/>
                                     <constraint firstAttribute="width" constant="185" id="SJU-RO-JL4"/>
@@ -35,6 +38,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ttR-IF-qXb">
+                                <rect key="frame" x="62.5" y="250" width="250" height="46"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="DFc-qx-HnO"/>
@@ -56,6 +60,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhiteShuffleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="toR-dd-ee4">
+                                <rect key="frame" x="116.5" y="49" width="142" height="88"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="88" id="F2O-M1-dwY"/>
@@ -73,14 +78,17 @@
                                 </variation>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J6X-gB-146">
+                                <rect key="frame" x="0.0" y="162" width="375" height="78"/>
                                 <subviews>
                                     <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lsj-4i-0UI" userLabel="line View">
+                                        <rect key="frame" x="0.0" y="39" width="375" height="1"/>
                                         <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="9de-AF-nii"/>
                                         </constraints>
                                     </view>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UY2-DM-5Ez">
+                                        <rect key="frame" x="8" y="43" width="359" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="z3G-F7-GeL"/>
                                         </constraints>
@@ -91,6 +99,7 @@
                                         </connections>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eGv-cO-axN">
+                                        <rect key="frame" x="8" y="0.0" width="359" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="1hF-Xh-pLR"/>
                                         </constraints>
@@ -116,12 +125,14 @@
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Or Line" translatesAutoresizingMaskIntoConstraints="NO" id="S1c-Zr-L0U">
+                                <rect key="frame" x="112.5" y="304" width="150" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="bWr-HG-Hqi"/>
                                     <constraint firstAttribute="height" constant="13" id="mNX-nj-uh9"/>
                                 </constraints>
                             </imageView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="b1L-J8-n7A">
+                                <rect key="frame" x="126.5" y="263" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="7rh-Va-9q9"/>
                                     <constraint firstAttribute="height" constant="20" id="SNg-gR-6Zd"/>
@@ -129,6 +140,7 @@
                                 <color key="color" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8C8-jf-1mY">
+                                <rect key="frame" x="148" y="617" width="79" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="79" id="SAn-Ez-kN3"/>
                                     <constraint firstAttribute="height" constant="30" id="ayL-0r-sIw"/>
@@ -142,6 +154,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2na-Go-npn">
+                                <rect key="frame" x="62.5" y="325" width="250" height="46"/>
                                 <color key="backgroundColor" red="0.1764705882" green="0.2666666667" blue="0.52156862749999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="EsA-Ux-qXc"/>
@@ -161,14 +174,17 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook_logo" translatesAutoresizingMaskIntoConstraints="NO" id="RhP-q7-qTo">
+                                <rect key="frame" x="67.5" y="330.5" width="35" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Tx5-Sf-vS2"/>
                                     <constraint firstAttribute="width" constant="35" id="U83-nC-htz"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="wdm-Le-ki7">
+                                <rect key="frame" x="103.5" y="381" width="168.5" height="20"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8v-0M-Wvc">
+                                        <rect key="frame" x="0.0" y="0.0" width="77" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="K4y-9w-Voh"/>
                                             <constraint firstAttribute="width" constant="78" id="VQM-M5-iLq"/>
@@ -185,15 +201,17 @@
                                             </mask>
                                         </variation>
                                         <connections>
-                                            <action selector="termsOfServiceButtonPressed:" destination="11m-Bf-sI4" eventType="touchUpInside" id="MxO-Eb-iFn"/>
+                                            <action selector="termsOfServiceButtonPressed:" destination="11m-Bf-sI4" eventType="touchUpInside" id="E8Q-aK-HoC"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="and" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vbh-2X-eOQ">
+                                        <rect key="frame" x="81" y="4" width="17.5" height="12"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="10"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MmY-i6-chs">
+                                        <rect key="frame" x="102.5" y="0.0" width="66" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="8NN-k0-ple"/>
                                             <constraint firstAttribute="width" constant="78" id="uRI-SY-OII"/>
