--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5S-4V-jao" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="1108"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="1118"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q5j-vq-aso" userLabel="Name and Title View">
                                                 <rect key="frame" x="0.0" y="600" width="600" height="61"/>
@@ -230,10 +230,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dCo-OJ-te4" userLabel="Fact View">
-                                                <rect key="frame" x="0.0" y="661" width="600" height="78"/>
+                                                <rect key="frame" x="0.0" y="661" width="600" height="88"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Top Line" translatesAutoresizingMaskIntoConstraints="NO" id="Tck-Dg-N2s" userLabel="line">
-                                                        <rect key="frame" x="0.0" y="78" width="600" height="1"/>
+                                                        <rect key="frame" x="0.0" y="87" width="600" height="1"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="1" id="DIf-9f-ind"/>
                                                         </constraints>
@@ -244,16 +244,16 @@
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="aEI-ic-YIN" firstAttribute="top" secondItem="dCo-OJ-te4" secondAttribute="top" id="AyM-W7-gf3"/>
-                                                    <constraint firstItem="Tck-Dg-N2s" firstAttribute="top" secondItem="aEI-ic-YIN" secondAttribute="bottom" id="EO1-qZ-cW7"/>
                                                     <constraint firstItem="aEI-ic-YIN" firstAttribute="leading" secondItem="dCo-OJ-te4" secondAttribute="leading" id="UhA-Rf-CjT"/>
-                                                    <constraint firstAttribute="bottom" secondItem="aEI-ic-YIN" secondAttribute="bottom" id="c3e-80-8e3"/>
+                                                    <constraint firstAttribute="bottom" secondItem="aEI-ic-YIN" secondAttribute="bottom" constant="10" id="c3e-80-8e3"/>
                                                     <constraint firstAttribute="trailing" secondItem="aEI-ic-YIN" secondAttribute="trailing" id="eE8-pn-k7E"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Tck-Dg-N2s" secondAttribute="bottom" id="hQt-e6-khM"/>
                                                     <constraint firstItem="Tck-Dg-N2s" firstAttribute="leading" secondItem="dCo-OJ-te4" secondAttribute="leading" id="t38-Yo-APO"/>
                                                     <constraint firstAttribute="trailing" secondItem="Tck-Dg-N2s" secondAttribute="trailing" id="uld-f3-gg2"/>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjX-Q8-gEl">
-                                                <rect key="frame" x="8" y="742" width="41.5" height="20"/>
+                                                <rect key="frame" x="8" y="752" width="41.5" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -276,7 +276,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dCe-w4-3mH" customClass="ChachaChoicesTagListView" customModule="Shuffles" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="771" width="600" height="312"/>
+                                                <rect key="frame" x="0.0" y="781" width="600" height="312"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="312" id="qYw-rF-hQs"/>
                                                 </constraints>
