--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hLe-I3-MDq">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,14 +18,14 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dsh-Hh-R5l" userLabel="Background Color View">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoadingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-Kh-nVl">
-                                        <rect key="frame" x="149" y="295" width="78" height="78"/>
+                                        <rect key="frame" x="168.66666666666666" y="329.66666666666669" width="78" height="78"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="78" id="Qim-2a-oEF"/>
                                             <constraint firstAttribute="height" constant="78" id="SsN-CR-kKR"/>
@@ -38,10 +38,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="32I-zm-XDi" customClass="CustomKolodaView" customModule="Shuffles" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" placeholderIntrinsicWidth="191" placeholderIntrinsicHeight="65" translatesAutoresizingMaskIntoConstraints="NO" id="3Dh-hH-PJE" customClass="BottomButtonsView" customModule="Shuffles" customModuleProvider="target">
-                                        <rect key="frame" x="92" y="602" width="191" height="65"/>
+                                        <rect key="frame" x="111.66666666666669" y="671" width="191" height="65"/>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -203,7 +203,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjX-Q8-gEl">
-                                                <rect key="frame" x="8" y="752" width="41.5" height="20"/>
+                                                <rect key="frame" x="8" y="752" width="41.666666666666664" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -304,11 +304,105 @@
                         <outlet property="theDescriptionDetailView" destination="h0H-yA-KZp" id="uRB-KU-aOw"/>
                         <outlet property="theProfileImageCarouselView" destination="vGv-4q-uCX" id="cla-An-9YF"/>
                         <outlet property="theProfileImageHolderView" destination="vGv-4q-uCX" id="9ri-bf-pWk"/>
+                        <segue destination="PjY-dj-Cfp" kind="presentation" identifier="CardDetailToSendMessageSegue" id="43e-Cs-ujw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lLv-S6-oCo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2137.5999999999999" y="423.68815592203902"/>
+        </scene>
+        <!--Card Send Message View Controller-->
+        <scene sceneID="2sH-tH-JLy">
+            <objects>
+                <viewController storyboardIdentifier="CardSendMessageViewController" id="PjY-dj-Cfp" customClass="CardSendMessageViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UvN-Sy-bDW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dlb-tf-QLn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5xD-8X-CcH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="111" placeholderIntrinsicHeight="38" translatesAutoresizingMaskIntoConstraints="NO" id="rf4-CY-7eA" customClass="MessageSalutationView" customModule="Shuffles" customModuleProvider="target">
+                                <rect key="frame" x="10" y="30" width="111" height="38"/>
+                                <color key="backgroundColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="beH-t5-vug"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXb-UG-Teb">
+                                <rect key="frame" x="374" y="31" width="30" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="X">
+                                    <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="dismissButtonPressed:" destination="PjY-dj-Cfp" eventType="touchUpInside" id="2Wb-Ep-x37"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Poopy butt butt" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="f14-zE-fNX">
+                                <rect key="frame" x="0.0" y="68" width="414" height="623"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c8N-4R-Se1">
+                                <rect key="frame" x="0.0" y="691" width="414" height="45"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aca-Jv-dY0">
+                                        <rect key="frame" x="364" y="7" width="36" height="30"/>
+                                        <color key="backgroundColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Send">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendButtonPressed:" destination="PjY-dj-Cfp" eventType="touchUpInside" id="waK-5z-Fj7"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="150" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTj-AJ-7SI">
+                                        <rect key="frame" x="326" y="12" width="28" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="aca-Jv-dY0" firstAttribute="centerY" secondItem="c8N-4R-Se1" secondAttribute="centerY" id="4xv-bj-FZJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="aca-Jv-dY0" secondAttribute="trailing" constant="14" id="7AA-WW-aVz"/>
+                                    <constraint firstItem="QTj-AJ-7SI" firstAttribute="centerY" secondItem="c8N-4R-Se1" secondAttribute="centerY" id="dwZ-h8-xYH"/>
+                                    <constraint firstAttribute="height" constant="45" id="fwD-2V-oMh"/>
+                                    <constraint firstItem="aca-Jv-dY0" firstAttribute="leading" secondItem="QTj-AJ-7SI" secondAttribute="trailing" constant="10" id="nFQ-nS-Pld"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Dlb-tf-QLn" firstAttribute="top" secondItem="c8N-4R-Se1" secondAttribute="bottom" id="1QJ-IG-R7c"/>
+                            <constraint firstItem="f14-zE-fNX" firstAttribute="leading" secondItem="5xD-8X-CcH" secondAttribute="leading" id="2hK-cL-yNF"/>
+                            <constraint firstItem="c8N-4R-Se1" firstAttribute="top" secondItem="f14-zE-fNX" secondAttribute="bottom" id="GO9-kc-l3R"/>
+                            <constraint firstItem="f14-zE-fNX" firstAttribute="top" secondItem="rf4-CY-7eA" secondAttribute="bottom" id="QFj-e8-mBz"/>
+                            <constraint firstAttribute="trailing" secondItem="rXb-UG-Teb" secondAttribute="trailing" constant="10" id="RvA-03-4Fh"/>
+                            <constraint firstAttribute="trailing" secondItem="c8N-4R-Se1" secondAttribute="trailing" id="UH3-vN-BTs"/>
+                            <constraint firstItem="rXb-UG-Teb" firstAttribute="centerY" secondItem="rf4-CY-7eA" secondAttribute="centerY" id="lyd-2N-GNE"/>
+                            <constraint firstItem="rf4-CY-7eA" firstAttribute="top" secondItem="UvN-Sy-bDW" secondAttribute="bottom" constant="10" id="nZD-tN-0sf"/>
+                            <constraint firstItem="c8N-4R-Se1" firstAttribute="leading" secondItem="5xD-8X-CcH" secondAttribute="leading" id="vgr-zC-5c8"/>
+                            <constraint firstAttribute="trailing" secondItem="f14-zE-fNX" secondAttribute="trailing" id="wJu-nl-BZg"/>
+                            <constraint firstItem="rf4-CY-7eA" firstAttribute="leading" secondItem="5xD-8X-CcH" secondAttribute="leading" constant="10" id="y1U-Fg-ZjT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="theBottomKeyboardViewConstraint" destination="1QJ-IG-R7c" id="Avy-38-1N0"/>
+                        <outlet property="theCharCountLabel" destination="QTj-AJ-7SI" id="imV-aA-StL"/>
+                        <outlet property="theKeyboardBarView" destination="c8N-4R-Se1" id="BQE-uD-0cN"/>
+                        <outlet property="theSalutationView" destination="rf4-CY-7eA" id="5Ur-Lr-9kR"/>
+                        <outlet property="theSendButton" destination="aca-Jv-dY0" id="9oA-sh-kLu"/>
+                        <outlet property="theTextView" destination="f14-zE-fNX" id="rRX-HB-Wlr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B6V-tl-EzS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3054" y="315"/>
         </scene>
         <!--Chacha Navigation View Controller-->
         <scene sceneID="NJs-ik-5Gj">
@@ -327,6 +421,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Edb-vs-eZq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="339" y="387"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8Hh-bn-avm">
+            <objects>
+                <viewController id="q3F-JV-ohV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z0K-wj-tw4"/>
+                        <viewControllerLayoutGuide type="bottom" id="tiw-fN-ayo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uDH-ZW-mgH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="toF-FE-KsE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hqT-1E-xW0">
+            <objects>
+                <viewController id="Y2t-sk-TZt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rj0-cb-WqO"/>
+                        <viewControllerLayoutGuide type="bottom" id="wS0-LI-LSG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="O6k-BY-02B">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QTn-hB-0hK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
